src/components/Collapse.scss
.collapse {
    button {
        width: 100%;
        height: 52px;
        display: flex;
        justify-content: space-between;
        align-items: center;
        background-color: rgba(255, 96, 96, 1);
        border-radius: 5px;
        padding: 0 15px;
        border: none;
        p {
            font-size: 24px;
            font-weight: bold;
            color: white;
        }
    }
}

.contenu {
    max-height: 0;//Par défaut, hauteur 0 (fermé)
    overflow: hidden;// Cache ce qui dépasse
    transition: max-height 0.4s ease-out; //Animation quand hauteur change
    background-color:rgba(246, 246, 246, 0.45);
    border-radius: 5px;

    &.ouvert {
        max-height: 500px; // Quand classe "ouvert", hauteur devient 200px
        padding: 25px 15px;

        ul {
            list-style-type: none;
        }
    }
}

.fleche {
    cursor: pointer;
    transform: rotate(-180deg);
        transition: transform 0.4s ease-out;
    &.haut {
        transform: rotate(0deg);
    }
}

